<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAge" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGender" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewAge"/>
    <Spinner
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerAge" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/textViewAge" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textViewAge"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAge" android:entries="@array/age_group"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="64dp" android:id="@+id/radioGroupButton"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerAge" app:layout_constraintStart_toEndOf="@+id/textViewGender"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/textViewGender"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp">

        <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />
        <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioButtonMale" android:layout_weight="1"/>
    </RadioGroup>
    <CheckBox
            android:text="@string/smoker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBoxSmoker" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupButton"
    />
    <TextView
            android:text="@string/premium"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textViewPremium" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/checkBoxSmoker"
            android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCalculate" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

    <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="resetInput"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCalculate" />

    <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPremium"
            app:layout_constraintStart_toEndOf="@+id/textViewPremium"
            app:layout_constraintTop_toTopOf="@+id/textViewPremium" />
</android.support.constraint.ConstraintLayout>